@@ -1,3 +1,11 @@
+2006-10-10: Johannes Schindelin <Johannes.Schindelin@gmx.de>
+	* implement --compact and --compact-dragging to shut up the
+	  script about mouse movements or drags.
+
+2006-09-12: Johannes Schindelin <Johannes.Schindelin@gmx.de>
+	* the reference rectangle is selected with a rubber band,
+	  and can be shown with 'd'.
+
 2006-06-15: Johannes Schindelin <Johannes.Schindelin@gmx.de>
 	* added timing: you can record the events with their timestamps now
 
